--- a/homies/themes/jfattymacs/gtk-3.0/gtk-keys.css
+++ b/homies/themes/jfattymacs/gtk-3.0/gtk-keys.css
@@ -66,7 +66,7 @@
   bind "<ctrl>u" { "delete-from-cursor" (paragraph-ends, -1) };
 
   bind "<ctrl>h" { "delete-from-cursor" (chars, -1) };
-  bind "<alt>w" { "delete-from-cursor" (word-ends, -1) };
+  bind "<ctrl>w" { "delete-from-cursor" (word-ends, -1) };
 }
 
 /*
